--- a/CSharp/VirtoCommerce.Module.Template/Module.Web.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/Module.Web.csproj
@@ -32,6 +32,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,6 +41,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -90,29 +92,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="module.ignore" />
     <None Include="packages.config" />
     <None Include="Content\help\index.html" />
     <None Include="Content\help\stylesheet.css" />
     <None Include="Content\help\sample.png" />
-    <Content Include="module.manifest">
-      <SubType>Designer</SubType>
-    </Content>
-    <None Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </None>
-    <None Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </None>
+    <None Include="app.config" />
+    <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="module.manifest" />
     <Content Include="Content\css\$safeprojectname$.css" />
-    <Content Include="Scripts\blades\blade1.js" />
-    <Content Include="Scripts\blades\blade1.tpl.html" />
+    <Content Include="Scripts\blades\helloWorld_blade1.js" />
+    <Content Include="Scripts\blades\helloWorld_blade1.tpl.html" />
     <Content Include="Scripts\$safeprojectname$.js" />
     <Content Include="Scripts\resources\$safeprojectname$Api.js" />
-    <Content Include="Web.config">
-      <SubType>Designer</SubType>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\Api\$safeprojectname$Controller.cs" />
@@ -124,7 +118,7 @@
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != '' And Exists('$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets')" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <ProjectExtensions>
     <VisualStudio>
