--- a/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
@@ -87,8 +87,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\css\managedModule.css" />
-    <None Include="Scripts\blades\helloWorld_blade1.js" />
-    <None Include="Scripts\blades\helloWorld_blade1.tpl.html" />
+    <None Include="Scripts\blades\helloWorld.js" />
+    <None Include="Scripts\blades\helloWorld.tpl.html" />
     <None Include="Scripts\managedModule.js" />
     <None Include="Scripts\resources\managedModuleApi.js" />
     <None Include="Web.config" />
@@ -102,7 +102,9 @@
     <None Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <VSTemplate Include="VirtoCommerce.Module.Template.vstemplate" />
+    <VSTemplate Include="VirtoCommerce.Module.Template.vstemplate">
+      <SubType>Designer</SubType>
+    </VSTemplate>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
