Updated api controller name

--- a/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
@@ -97,7 +97,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Controllers\Api\managedModuleController.cs" />
+    <None Include="Controllers\Api\MyModuleController.cs" />
     <None Include="Module.cs" />
     <None Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
