--- a/CSharp/VirtoCommerce.OrderExModule.Template/VirtoCommerce.OrderExModule.Template.csproj
+++ b/CSharp/VirtoCommerce.OrderExModule.Template/VirtoCommerce.OrderExModule.Template.csproj
@@ -146,6 +146,15 @@
       <SubType>Designer</SubType>
     </VSTemplate>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Web\Content\help\index.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Web\Content\help\stylesheet.css" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Web\Content\help\arch_diagram.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
