Updated help (readme)

--- a/CSharp/VirtoCommerce.OrderExModule.Template/Web/Web.csproj
+++ b/CSharp/VirtoCommerce.OrderExModule.Template/Web/Web.csproj
@@ -138,6 +138,9 @@
     <None Include="packages.config" />
     <None Include="app.config" />
     <None Include="Web.config" />
+    <None Include="Content\help\index.html" />
+    <None Include="Content\help\stylesheet.css" />
+    <None Include="Content\help\arch_scheme.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="module.manifest" />
