--- a/CSharp/VirtoCommerce.OrderExModule.Template/Data/Data.csproj
+++ b/CSharp/VirtoCommerce.OrderExModule.Template/Data/Data.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{$guid2$}</ProjectGuid>
+    <ProjectGuid>{$guid3$}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>$safeprojectname$</RootNamespace>
@@ -61,14 +61,10 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>$nugetpackagesfolder$Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
-    <Reference Include="StackExchange.Redis, Version=1.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$nugetpackagesfolder$StackExchange.Redis.1.2.6\lib\net46\StackExchange.Redis.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,11 +74,11 @@
     <Reference Include="VirtoCommerce.CartModule.Data, Version=2.16.16.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>$nugetpackagesfolder$VirtoCommerce.CartModule.Data.2.16.16\lib\net461\VirtoCommerce.CartModule.Data.dll</HintPath>
     </Reference>
-    <Reference Include="VirtoCommerce.Domain, Version=2.25.19.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$nugetpackagesfolder$VirtoCommerce.Domain.2.25.19\lib\net461\VirtoCommerce.Domain.dll</HintPath>
+    <Reference Include="VirtoCommerce.Domain, Version=2.25.21.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>$nugetpackagesfolder$VirtoCommerce.Domain.2.25.21\lib\net461\VirtoCommerce.Domain.dll</HintPath>
     </Reference>
-    <Reference Include="VirtoCommerce.OrderModule.Data, Version=2.17.22.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$nugetpackagesfolder$VirtoCommerce.OrderModule.Data.2.17.22\lib\net461\VirtoCommerce.OrderModule.Data.dll</HintPath>
+    <Reference Include="VirtoCommerce.OrderModule.Data, Version=2.17.23.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>$nugetpackagesfolder$VirtoCommerce.OrderModule.Data.2.17.23\lib\net461\VirtoCommerce.OrderModule.Data.dll</HintPath>
     </Reference>
     <Reference Include="VirtoCommerce.Platform.Core, Version=2.13.43.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>$nugetpackagesfolder$VirtoCommerce.Platform.Core.2.13.43\lib\net461\VirtoCommerce.Platform.Core.dll</HintPath>
@@ -92,15 +88,41 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\CartEx.cs" />
-    <Compile Include="Model\CartExType.cs" />
-    <Compile Include="Model\CustomerOrderEx.cs" />
-    <Compile Include="Model\Invoice.cs" />
-    <Compile Include="Model\LineItemEx.cs" />
+    <Compile Include="Migrations\Cart\201904120528190_Initial.cs" />
+    <Compile Include="Migrations\Cart\201904120528190_Initial.Designer.cs">
+      <DependentUpon>201904120528190_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Cart\Configuration.cs" />
+    <Compile Include="Migrations\Order\201904120529362_Initial.cs" />
+    <Compile Include="Migrations\Order\201904120529362_Initial.Designer.cs">
+      <DependentUpon>201904120529362_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Order\Configuration.cs" />
+    <Compile Include="Model\Cart\CartExEntity.cs" />
+    <Compile Include="Model\Cart\LineItemExEntity.cs" />
+    <Compile Include="Model\Order\CustomerOrderExEntity.cs" />
+    <Compile Include="Model\Order\InvoiceEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CartExRepository.cs" />
+    <Compile Include="Repositories\OrderExRepository.cs" />
+    <Compile Include="Services\CustomerOrderBuilderExService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\Cart\201904120528190_Initial.resx">
+      <DependentUpon>201904120528190_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\Order\201904120529362_Initial.resx">
+      <DependentUpon>201904120529362_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\$ext_safeprojectname$.Core\$ext_safeprojectname$.Core.csproj">
+      <Project>{$guid2$}</Project>
+      <Name>$ext_safeprojectname$.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
