--- a/CSharp/VirtoCommerce.OrderExModule.Template/Data/Data.csproj
+++ b/CSharp/VirtoCommerce.OrderExModule.Template/Data/Data.csproj
@@ -80,11 +80,11 @@
     <Reference Include="VirtoCommerce.OrderModule.Data, Version=2.17.23.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>$nugetpackagesfolder$VirtoCommerce.OrderModule.Data.2.17.23\lib\net461\VirtoCommerce.OrderModule.Data.dll</HintPath>
     </Reference>
-    <Reference Include="VirtoCommerce.Platform.Core, Version=2.13.43.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$nugetpackagesfolder$VirtoCommerce.Platform.Core.2.13.43\lib\net461\VirtoCommerce.Platform.Core.dll</HintPath>
+    <Reference Include="VirtoCommerce.Platform.Core, Version=2.13.44.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>$nugetpackagesfolder$VirtoCommerce.Platform.Core.2.13.44\lib\net461\VirtoCommerce.Platform.Core.dll</HintPath>
     </Reference>
-    <Reference Include="VirtoCommerce.Platform.Data, Version=2.13.43.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$nugetpackagesfolder$VirtoCommerce.Platform.Data.2.13.43\lib\net461\VirtoCommerce.Platform.Data.dll</HintPath>
+    <Reference Include="VirtoCommerce.Platform.Data, Version=2.13.44.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>$nugetpackagesfolder$VirtoCommerce.Platform.Data.2.13.44\lib\net461\VirtoCommerce.Platform.Data.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -98,10 +98,10 @@
       <DependentUpon>201904120529362_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Order\Configuration.cs" />
-    <Compile Include="Model\CartExEntity.cs" />
-    <Compile Include="Model\LineItemExEntity.cs" />
-    <Compile Include="Model\CustomerOrderExEntity.cs" />
-    <Compile Include="Model\InvoiceEntity.cs" />
+    <Compile Include="Model\Cart\CartExEntity.cs" />
+    <Compile Include="Model\Cart\LineItemExEntity.cs" />
+    <Compile Include="Model\Order\CustomerOrderExEntity.cs" />
+    <Compile Include="Model\Order\InvoiceEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CartExRepository.cs" />
     <Compile Include="Repositories\OrderExRepository.cs" />
@@ -116,6 +116,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
