--- a/CSharp/VirtoCommerce.OrderExModule.Template/VirtoCommerce.OrderExModule.Template.csproj
+++ b/CSharp/VirtoCommerce.OrderExModule.Template/VirtoCommerce.OrderExModule.Template.csproj
@@ -67,6 +67,14 @@
     <None Include="Core\Model\Cart\LineItemEx.cs" />
     <None Include="Core\AssemblyInfo.cs" />
     <None Include="Data\AssemblyInfo.cs" />
+    <None Include="Data\Model\Cart\CartExEntity.cs" />
+    <None Include="Data\Model\Cart\LineItemExEntity.cs" />
+    <None Include="Data\Model\Order\CustomerOrderExEntity.cs" />
+    <None Include="Data\Model\Order\InvoiceEntity.cs" />
+    <None Include="Data\Repositories\CartExRepository.cs" />
+    <None Include="Data\Repositories\OrderExRepository.cs" />
+    <None Include="Data\Services\CustomerOrderBuilderExService.cs" />
+    <None Include="Core\Model\Order\LineItemEx.cs" />
     <None Include="Data\Migrations\Cart\Initial.cs" />
     <None Include="Data\Migrations\Cart\Initial.Designer.cs">
       <DependentUpon>Initial.cs</DependentUpon>
@@ -77,14 +85,6 @@
       <DependentUpon>Initial.cs</DependentUpon>
     </None>
     <None Include="Data\Migrations\Order\Configuration.cs" />
-    <None Include="Data\Model\Cart\CartExEntity.cs" />
-    <None Include="Data\Model\Cart\LineItemExEntity.cs" />
-    <None Include="Data\Model\Order\CustomerOrderExEntity.cs" />
-    <None Include="Data\Model\Order\InvoiceEntity.cs" />
-    <None Include="Data\Repositories\CartExRepository.cs" />
-    <None Include="Data\Repositories\OrderExRepository.cs" />
-    <None Include="Data\Services\CustomerOrderBuilderExService.cs" />
-    <None Include="Core\Model\Order\LineItemEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Web\Module.cs" />
   </ItemGroup>
@@ -140,9 +140,9 @@
     <None Include="Data\Migrations\Cart\Initial.resx">
       <DependentUpon>Initial.cs</DependentUpon>
     </None>
-    <EmbeddedResource Include="Data\Migrations\Order\Initial.resx">
+    <None Include="Data\Migrations\Order\Initial.resx">
       <DependentUpon>Initial.cs</DependentUpon>
-    </EmbeddedResource>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
