--- a/CSharp/VirtoCommerce.PriceExModule.Template/Core/Core.csproj
+++ b/CSharp/VirtoCommerce.PriceExModule.Template/Core/Core.csproj
@@ -50,7 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\PriceEx.cs" />
+    <Compile Include="Models\PriceEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
