--- a/CSharp/VirtoCommerce.PriceExModule.Template/Data/Data.csproj
+++ b/CSharp/VirtoCommerce.PriceExModule.Template/Data/Data.csproj
@@ -81,7 +81,7 @@
       <DependentUpon>201904300818457_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Model\PriceExEntity.cs" />
+    <Compile Include="Models\PriceExEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\PriceExRepository.cs" />
   </ItemGroup>
