--- a/CSharp/VirtoCommerce.Module.Template/Web/Web.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/Web/Web.csproj
@@ -128,7 +128,7 @@
     <Content Include="module.manifest" />
     <Content Include="Content\css\$ext_safeprojectnamejs$.css" />
     <Content Include="Scripts\blades\helloWorld.js" />
-    <Content Include="Scripts\blades\helloWorld.tpl.html" />
+    <Content Include="Scripts\blades\helloWorld.html" />
     <Content Include="Scripts\$ext_safeprojectnamejs$.js" />
     <Content Include="Scripts\resources\$ext_safeprojectnamejs$-api.js" />
   </ItemGroup>
