[Order Ex] Rename blade template file

--- a/CSharp/VirtoCommerce.OrderExModule.Template/Web/Web.csproj
+++ b/CSharp/VirtoCommerce.OrderExModule.Template/Web/Web.csproj
@@ -145,7 +145,7 @@
   <ItemGroup>
     <Content Include="module.manifest" />
     <Content Include="Scripts\blades\invoice-detail.js" />
-    <Content Include="Scripts\blades\invoice-detail.tpl.html" />
+    <Content Include="Scripts\blades\invoice-detail.html" />
     <Content Include="Scripts\$ext_safeprojectnamejs$.js" />
     <Content Include="Scripts\tree-template.tpl.html" />
   </ItemGroup>
